# django-svelte-sample-app

./: .gitignore  pyproject.toml
docker/: Dockerfile  entrypoint.sh
frontend/: package-lock.json  rollup.config.js
frontend/src/: App.svelte
myapp/: settings.py  urls.py
myapp/api/: views.py
myapp/spa/: apps.py  views.py
myapp/static/frontend/: bundle.js  bundle.js.map
myapp/staticfiles/: staticfiles.json
myapp/staticfiles/frontend/: bundle.f1bdc23c66d3.js
myapp/templates/registration/: login.html
myapp/templates/spa/: index.html
scripts/: manage.sh  migrate.sh  run-dev-server.sh
scripts/docker/: build.sh  run.sh
